--- a/content/_sass/partials/_variables.scss
+++ b/content/_sass/partials/_variables.scss
@@ -9,7 +9,12 @@ $salmon: #f5ecdf;
 $nav-border-color: #e7e7e7;
 $nav-border-color-2: rgba(0, 0, 0, 0.1);
 $nav-bg-color: #f8f9fa;
+// $nav-item-bg-color-desktop: #f8f9fa;
+$nav-item-hover-color-desktop: #6c757d;
+$nav-link-hover-color-desktop: rgba(0, 0, 0, 0.8);
+
 $table-border-light: #dee2e6;
+
 $footer-bg-color: $cwl-red;
 $footer-link-old-color: #005285;
 $footer-link-old-hover-color: #22527c;
